--- a/app/heatmap.html
+++ b/app/heatmap.html
@@ -30,9 +30,8 @@
         <div class="col-md-4">
           <div id="chart"></div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3" style="padding: 0">
           <div id="text">
-           (here goes the text)
           </div>
         </div>
         <div class="col-md-5">
