installed bootstrap-select as dependency and got it to work in the UI (in a very basic way, though)

--- a/app/heatmap.html
+++ b/app/heatmap.html
@@ -8,15 +8,25 @@
         stroke-width:2px;   
       }
 
+      div#text .line{
+        font-family: Merriweather,serif;
+        font-size: 11pt;
+      }
+
       text.label {
         font-size: 8pt;
         font-family: Consolas, courier;
         fill: #000;
       }
     </style>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
+    <script src="bower_components/bootstrap-select/js/bootstrap-select.js"></script>
     <script src="js/main.js"></script>
+
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
   </head>
   <body onload="initViz()">
     <div class="container-fluid">
@@ -24,6 +34,13 @@
       <div class="page-header">
         <h1>Vergil's Aeneid in JSTOR</h1>
         <p class="lead">An interactive visualization of quotations of and references to the Aeneid found within articles in JSTOR.</p>
+        <p>Display:
+          <select class="selectpicker show-tick" id="datafilter">
+            <option>all</option>
+            <option>quotations</option>
+            <option>references</option>
+          </select>
+        </p>
       </div>
       <!-- the main viewport, divided into 3 columns -->
       <div class="row">
