got tooltips on the heatmap to work (with d3-tip); not perfect, but it's a start

--- a/app/heatmap.html
+++ b/app/heatmap.html
@@ -6,10 +6,12 @@
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
     <script src="bower_components/bootstrap-select/js/bootstrap-select.js"></script>
+     <script src="bower_components/d3-tip/index.js"></script>
     <script src="js/main.js"></script>
 
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="css/d3tip.css" rel="stylesheet">
     <style>
       rect.bordered {
         stroke: #E6E6E6;
@@ -20,7 +22,7 @@
         font-family: Merriweather,serif;
         font-size: 11pt;
       }
-      
+
       body{
         height: 100%;
         overflow: hidden;
