added as dependency mustache.js (template engine); done some progress on the visualization, mostly the loadResults function.

--- a/app/heatmap.html
+++ b/app/heatmap.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="col-md-5 pre-scrollable" id="rightcolumn">
-          (here will go the results)
+          <div id="results"/>
         </div>
       </div>
     </div>
