--- a/app/heatmap.html
+++ b/app/heatmap.html
@@ -79,59 +79,33 @@
         </div>
         <div class="col-md-5 pre-scrollable" id="rightcolumn">
           <div id="results">
-                <div id="accordion" class="panel-group">
-                    <!-- one of these blocks for each group of lines -->
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <!-- {{label}} -->
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Aen. 1.1</a>
-                                <!-- {{reference_count}} -->
-                                <span class="badge reference pull-right">24</span>
-                                <!-- {{quotation_count}} -->
-                                <span class="badge quotation pull-right">314</span>
-                            </h4>
-                        </div>
-                        <div id="collapseOne" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <p>HTML stands for HyperText Markup Language. HTML is the main markup language for describing the structure of Web pages. <a href="http://www.tutorialrepublic.com/html-tutorial/" target="_blank">Learn more.</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Aen. 1.2</a>
-                                <!-- {{reference_count}} -->
-                                <span class="badge reference pull-right">8</span>
-                                <!-- {{quotation_count}} -->
-                                <span class="badge quotation pull-right">14</span>
-                            </h4>
-                        </div>
-                        <div id="collapseTwo" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <!-- For the 1st version: 1 para for each article -->
-                                <p>Bootstrap is a powerful front-end framework for faster and easier web development. It is a collection of CSS and HTML conventions. <a href="http://www.tutorialrepublic.com/twitter-bootstrap-tutorial/" target="_blank">Learn more.</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Aen. 1.3</a>
-                            </h4>
-                        </div>
-                        <div id="collapseThree" class="panel-collapse collapse">
-                            <div class="panel-body">
-                                <p>CSS stands for Cascading Style Sheet. CSS allows you to specify various style properties for a given HTML element such as colors, backgrounds, fonts etc. <a href="http://www.tutorialrepublic.com/css-tutorial/" target="_blank">Learn more.</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
           </div>
         </div>
       </div>
     </div>
     </div>
+    <script id="test" type="x-tmpl-mustache">
+    Hello Franco!
+    </script>
+    <script id="results_template" type="x-tmpl-mustache">
+          {{#results}}
+          <!-- one of these blocks for each line grouping -->
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                  <h4 class="panel-title">
+                      <a data-toggle="collapse" data-parent="#{{parent}}" href="#collapse_{{line_label}}">{{label}}</a>
+                      <span class="badge reference pull-right" title="number of references">{{ref_count}}</span>
+                      <span class="badge quotation pull-right" title="number of quotations">{{quot_count}}</span>
+                  </h4>
+              </div>
+              <div id="collapse_{{line_label}}" class="panel-collapse collapse">
+                  <div class="panel-body">
+                      <p>TBD</p>
+                  </div>
+              </div>
+          </div>
+          {{/results}}
+    </script>
   </body>
 </html>
