--- a/about.html
+++ b/about.html
@@ -98,9 +98,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="/explore">Explore</a></li>
-            <li class="active"><a href="/about">About</a></li>
+            <li><a href="index">Home</a></li>
+            <li><a href="explore">Explore</a></li>
+            <li class="active"><a href="about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
