--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="/explore">Explore</a></li>
-            <li><a href="/about">About</a></li>
+            <li class="active"><a href="index">Home</a></li>
+            <li><a href="explore">Explore</a></li>
+            <li><a href="about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
