--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="container">
         <h1><em>Aeneid</em> in JSTOR</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="/explore" role="button">Go to the visualization &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="explore" role="button">Go to the visualization &raquo;</a></p>
       </div>
     </div>
     <div class="container-fluid">
