committed local changes; started adding some descriptive texts to index.hmtl

--- a/app/explore.html
+++ b/app/explore.html
@@ -158,9 +158,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li class="active"><a href="/explore">Explore</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="index">Home</a></li>
+            <li class="active"><a href="explore">Explore</a></li>
+            <li><a href="about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -195,7 +195,7 @@
       </div>
     </div>
     </div>
-    <script async defer src="https://hypothes.is/embed.js"></script>
+    <!--<script async defer src="https://hypothes.is/embed.js"></script>-->
      <script id="line_number_template" type="x-tmpl-mustache">
       <span class="line_number" style="visibility:{{visibility}}">{{line}} </span>{{text}}
     </script>
