fixed a couple more issues

--- a/app/explore.html
+++ b/app/explore.html
@@ -228,9 +228,9 @@
         </div>
         <div class="col-md-4">
           <span id="legend" class="pull-left">
-            Legend:
-            <span class="badge quotation" title="legend for quotations">quotation</span>
-            <span class="badge reference" title="legend for quotations">reference</span>
+            Results:
+            <span class="badge quotation" title="legend for quotations">quotations</span>
+            <span class="badge reference" title="legend for quotations">references</span>
           </span>
         </div>
       </div>
