publishing the latest version of the app

--- a/about.html
+++ b/about.html
@@ -107,25 +107,67 @@
     </nav>
    
     <div class="container" style="margin-top: 70px">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-3">
-          <h2>Quotations</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        </div>
-        <div class="col-md-3">
-          <h2>References</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-       </div>
-        <div class="col-md-3">
-          <h2>Code</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-        <div class="col-md-3">
-          <h2>Text</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      <h3>Credits</h3>
+      <p><em>Aeneid in JSTOR</em> has been developed by <a>Matteo Romanello</a>, but it's born out of an online conversation with Ron Snyders, Neel Coffee, Chirs Forstall, Kaithleen Diddams and the tall guy.
+      Thanks also to Dario Rodighiero and Michele Pasin for their precious advices!
+      </p>
+
+      <h3>Data</h3>
+      <p>Say how many references, how many quotations and how many papers in total.</p>
+
+      <h3>Code</h3>
+      <p></p>
+      <!-- FAQ -->
+      <div>
+        <h3>FAQ</h3>
+        <div class="panel-group" id="accordion-faq">
+          <!-- Question 1 -->
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion-faq" href="#reply_1">
+                    Why the Aeneid? Is it possible to have other texts?
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="reply_1">
+                <div class="panel-body">
+                  <p>TODO</p>
+                </div>
+              </div>
+          </div>
+          <!-- Question 2 -->
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion-faq" href="#reply_2">
+                    Another question?
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="reply_2">
+                <div class="panel-body">
+                  <p>here goes the answer</p>
+                </div>
+              </div>
+          </div>
+          <!-- Question 3 -->
+          <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <a data-toggle="collapse" data-parent="#accordion-faq" href="#reply_3">
+                    Yet Another question??
+                  </a>
+                </h4>
+              </div>
+              <div class="panel-collapse collapse" id="reply_3">
+                <div class="panel-body">
+                  <p>here goes the answer</p>
+                </div>
+              </div>
+          </div>
         </div>
       </div>
-    <script async defer src="https://hypothes.is/embed.js"></script>
+    </div>
   </body>
 </html>
