--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         background-color: #fcf8e3;
         font-style: normal;
       }
+
+      div.jumbotron {
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
       
       /* 
       TODO: set the max-height property at run time; 
@@ -112,13 +117,39 @@
     <div class="jumbotron">
       <div class="container">
         <h1><em>Aeneid</em> in JSTOR</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="explore" role="button">Go to the visualization &raquo;</a></p>
+        <p>It's a proof of concept of how next-generation tools for retrieving bibliographic information could look like.<br/> Try it out to find articles in JSTOR that quote or refer to specific passages of Vergil's <em>Aeneid</em>.
+        </p>
+        <p><a class="btn btn-primary btn-lg" href="explore" role="button">Explore &raquo;</a></p>
       </div>
     </div>
+        <div class="container">
+      <div class="row">
+        <div class="col-md-4 text-justify">
+          <h2>Browse</h2>
+          <img src="imgs/index.png" class="img-responsive" alt="Responsive image">
+          <br/>
+          <p>A <strong>visual index</strong> provides an overview of quotations and references, where each cell represents a chunk of the text. The darker a given cell is, the higher is the density of quotations and references within that chunk.
+          <p><a class="btn btn-secondary" href="about" role="button">Read more</a></p>
+          </p>
+        </div>
+        <div class="col-md-4 text-justify">
+          <h2>Read</h2>
+          <img src="imgs/results.png" class="img-responsive" alt="Responsive image">
+          <br/>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" href="about" role="button">Read more</a></p>
+       </div>
+        <div class="col-md-4 text-justify">
+          <h2>Annotate</h2>
+          <img src="imgs/annotation.png" class="img-responsive" alt="Responsive image">
+          <br/>
+          <p>Thanks to the integration with the platform <a href="http://hypothes.is">hypothes.is</a> it is possible to annotate the visualisation (either privately or publicly). This way, you can take notes while you discover new articles related to the <em>Aeneid</em></p>.
+          <p><a class="btn btn-secondary" href="about" role="button">Read more</a></p>
+        </div>
+      </div>
     <div class="container-fluid">
       <!-- the main viewport, divided into 3 columns -->
     </div>
-    <script async defer src="https://hypothes.is/embed.js"></script>
+    <!--<script async defer src="https://hypothes.is/embed.js"></script>-->
   </body>
 </html>
