committing some changes that ought to remain local (re-enabled server-side loading of hypothes.is; inserted snippet for piwik analytics)

--- a/explore.html
+++ b/explore.html
@@ -6,6 +6,21 @@
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> 
     <script src="bower_components/bootstrap-select/js/bootstrap-select.js"></script>
+    <!-- Piwik -->
+    <script type="text/javascript">
+      var _paq = _paq || [];
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="//piwik.dainst.org/";
+        _paq.push(['setTrackerUrl', u+'piwik.php']);
+        _paq.push(['setSiteId', '9']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
+    <noscript><p><img src="//piwik.dainst.org/piwik.php?idsite=9" style="border:0;" alt="" /></p></noscript>
+    <!-- End Piwik Code -->
     <script src="bower_components/mustache.js/mustache.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>
@@ -250,7 +265,7 @@
       </div>
     </div>
     </div>
-    <!--<script async defer src="https://hypothes.is/embed.js"></script>-->
+    <script async defer src="https://hypothes.is/embed.js"></script>
      <script id="line_number_template" type="x-tmpl-mustache">
       <span class="line_number" style="visibility:{{visibility}}">{{line}} </span>{{text}}
     </script>
