--- a/app/explore.html
+++ b/app/explore.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
+  <title>Aeneid in JSTOR</title>
   <head>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/d3/d3.js"></script>
@@ -186,7 +187,7 @@
     <span id="manipula" style="display: none">☞ </span>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -194,13 +195,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><em>Aeneid</em> in JSTOR</a>
+          <a class="navbar-brand" href="/"><em>Aeneid</em> in JSTOR</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index">Home</a></li>
-            <li class="active"><a href="explore">Explore</a></li>
-            <li><a href="about">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/explore">Explore</a></li>
+            <li><a href="/about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
